force-app/main/default/objects/Bedrock_Service_Contract__c/Bedrock_Service_Contract__c.object-meta.xml
<CustomObject>
    <description>A service contract on a Bedrock asset. In production this is standard Contract / ServiceContract.</description>
    <label>Bedrock Service Contract</label>
    <nameField>
    <displayFormat>BSC-{00000}</displayFormat>
    <label>Contract Number</label>
    <type>AutoNumber</type>
</nameField>
    <pluralLabel>Bedrock Service Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>