force-app/main/default/objects/Bedrock_Service_Contract__c/fields/Annual_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>Annual_Value_USD__c</fullName>
    <description>ARR per asset; sum is the customer's contract spend.</description>
    <label>Annual Value (USD)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>