force-app/main/default/objects/Bedrock_Service_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_Id__c</columns>
    <columns>Customer__c</columns>
    <columns>Asset__c</columns>
    <columns>Contract_Tier__c</columns>
    <columns>Annual_Value_USD__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>